# trabalho-final-trabalho_final_cheese

./: .gitignore  README.md  exemplo.py  pyproject.toml  pytest.ini
cheesepp/: __init__.py  __main__.py  ast.py  cli.py  ctx.py  errors.py  grammar.lark  node.py  parser.py  runtime.py  testing.py  transformer.py
exemplos/: exemplo_01.cheesepp  exemplo_02.cheesepp  exemplo_03.cheesepp  exemplo_04.cheesepp  exemplo_05.cheesepp  exemplo_06.cheesepp
tests/: test_exemplo_01.py  test_exemplo_02.py  test_exemplo_03.py  test_exemplo_04.py  test_exemplo_05.py  test_exemplo_06.py  test_exemplo_07.py  test_exemplo_08.py  test_exemplo_09.py  test_exemplo_10.py  test_exemplo_11.py  test_exemplo_12.py
