[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheesepp"
version = "0.1.0"
description = "Interpretador para a linguagem Cheese++"
requires-python = ">=3.8"
dependencies = [
    "lark",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cheesepp*"]
exclude = ["exemplos*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]